
v0.2.0:
    - Fixed issue with the Retry prompt not appearing when !no_prompt_box = 1 and setting !ram_disable_box to #$00.
    - Added SRAM initialization code for new save files and added "load_new_file" extra routine.

v0.2.1:
    - Fixed issue where choosing an option in the Retry prompt wouldn't play the sound effect.

v0.2.2:
    - Added an option to replace "Mario" with "DEATHS" in the status bar, like the standalone Death Counter patch.
    - Optimized sprite load index table reset loop.
    - Fixed issue where calling $00F606 in consecutive frames could make the level's music restart even if it didn't change (similar fix to v0.1.9).

v0.2.3:
    - Fixed issue with ROMs where Lunar Magic v3.0+ was used but the routine at $03BCDC wasn't installed (thanks to SJandCharlieTheCat for reporting this).
    - Change get_screen_number macro to a subroutine and made it check for LM3's $03BCDC routine installation at runtime, for more robustness.
    - Changed settings.asm formatting to be a bit easier to use.
    - Small speed improvement for SRAM saving/loading on FastROM.

v0.2.4:
    - Fixed issue that would prevent the Game Over music from playing when running out of lives (with !lose_lives = 1) and play the death SFX during the Game Over screen (thanks to simon.caio for reporting this).
    - Fixed game crash when using the VWF Dialogues patch, due to Retry overwriting the SRAM size even when it was set to a larger size by an external resource (thanks to simon.caio for reporting this).
    - Made some space and cycle optimizations to the NMI routine.

v0.2.5:
    - Added more support for ObjecTool, by only reserving Custom Normal Objects 00-51 for the custom midway bar, allowing to use Custom Normal Objects 52-FF in ObjecTool normally.
    - Added ObjecTool readme.

v0.2.6:
    - Changed !lose_lives define to a table to enable/disable infinite lives on a sublevel basis.