@@ -34,14 +34,15 @@ endif
 !ram_prompt_phase    = !retry_freeram+$0C ; 1
 !ram_update_window   = !retry_freeram+$0D ; 1
 !ram_is_dying        = !retry_freeram+$0E ; 1
-!ram_prompt_override = !retry_freeram+$0F ; 1
-!ram_disable_exit    = !retry_freeram+$10 ; 1
-!ram_set_checkpoint  = !retry_freeram+$11 ; 2
-!ram_9D_backup       = !retry_freeram+$13 ; 1
-!ram_prompt_x_pos    = !retry_freeram+$14 ; 1
-!ram_prompt_y_pos    = !retry_freeram+$15 ; 1
-!ram_disable_box     = !retry_freeram+$16 ; 1
-!ram_reserved        = !retry_freeram+$17 ; 9 (reserved for future expansion)
+!ram_9D_backup       = !retry_freeram+$0F ; 1
+!ram_l2_backup       = !retry_freeram+$10 ; 1
+!ram_prompt_override = !retry_freeram+$11 ; 1
+!ram_disable_exit    = !retry_freeram+$12 ; 1
+!ram_set_checkpoint  = !retry_freeram+$13 ; 2
+!ram_prompt_x_pos    = !retry_freeram+$15 ; 1
+!ram_prompt_y_pos    = !retry_freeram+$16 ; 1
+!ram_disable_box     = !retry_freeram+$17 ; 1
+!ram_reserved        = !retry_freeram+$18 ; 8 (reserved for future expansion)
 !ram_death_counter   = !retry_freeram+$20 ; 5
 !ram_checkpoint      = !retry_freeram+$25 ; 192
 !ram_cust_obj_data   = !retry_freeram+$E5 ; 1+(!max_custom_midway_num*4)
